--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'gyanaswain09634/maven-gyana-docker-agent:v1'
+      image 'abhishekf5/maven-abhishek-docker-agent'
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
   }
@@ -9,7 +9,7 @@ pipeline {
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        //git branch: 'master', url: 'https://github.com/GyanaRanjan9090/java-maven-sonar-argocd-helm-k8s'
+        git branch: 'master', url: 'https://github.com/GyanaRanjan9090/java-maven-sonar-argocd-helm-k8s'
       }
     }
     stage('Build and Test') {
