--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -38,8 +38,9 @@ pipeline {
       steps {
         script {
             sh 'cd spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+            def dockerImage = docker.
+            image("${DOCKER_IMAGE}")
+            docker.withRegistry('https://index.docker.io/v1/', "dockerhub") {
                 dockerImage.push()
             }
         }
