--- a/spring-boot-app/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: spring-boot-app
-          image: 'gyanaswain09634/ultimate-cicd:replaceImageTag'
+          image: 'gyanaswain09634/ultimate-cicd:25'
           ports:
             - containerPort: 8080
